No effect of button press during displaying number

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 
 body{
     text-align: center;
-    background-color: rgba(255, 179, 38, 0.829);
+    background-color: rgb(39 147 155);
 }
 h1{
-    color:rgb(252, 39, 24);
+    color:rgba(222, 255, 38, 0.829);
     font-size: 70px;;
     
 }
